--- a/pyoxidizer.toml
+++ b/pyoxidizer.toml
@@ -60,10 +60,10 @@ type = "write-license-files"
 path = ""
 
 # Package .py files discovered in a local directory.
-# [[packaging_rule]]
-# type = "package-root"
-# path = "/src/mypackage"
-# packages = ["foo", "bar"]
+[[packaging_rule]]
+type = "package-root"
+path = "."
+packages = ["hello"]
 
 # Package things from a populated virtualenv.
 # [[packaging_rule]]
@@ -81,11 +81,11 @@ path = ""
 # Python interpreter is invoked, this section is not relevant.
 [[embedded_python_run]]
 # Run an interactive Python interpreter.
-mode = "repl"
+#mode = "repl"
 
 # Import a Python module and run it.
-#mode = "module"
-#module = "mypackage.__main__"
+mode = "module"
+module = "hello.hello"
 
 # Evaluate some Python code.
 #mode = "eval"
