--- a/pyoxidizer.toml
+++ b/pyoxidizer.toml
@@ -65,6 +65,10 @@ type = "package-root"
 path = "."
 packages = ["hello"]
 
+[[packaging_rule]]
+type = "pip-install-simple"
+package = "area"
+
 # Package things from a populated virtualenv.
 # [[packaging_rule]]
 # type = "virtualenv"
